export const snapshot = {};

snapshot[`collect - export.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 71,
          line: 0,
        },
        start: {
          character: 23,
          line: 0,
        },
      },
      specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
]
`;

snapshot[`collect - lockfile_not_importable - mod.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 23,
          line: 0,
        },
        start: {
          character: 7,
          line: 0,
        },
      },
      specifier: "std/version.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/",
      protocol: "https:",
      version: "0.218.0",
    },
  },
  {
    code: {
      span: undefined,
      specifier: "https://deno.land/std@0.200.0/version.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/",
      protocol: "https:",
      version: "0.218.0",
    },
  },
]
`;

snapshot[`collect - lockfile_not_importable - mod.ts 2`] = `
[
  {
    data: {
      remote: {
        "https://deno.land/std@0.200.0/version.ts": "ae3fc7003d763c0d78f76fad04df179529d0aef813a247b4a3909e22adf6bfd1",
      },
      version: "3",
    },
    specifier: "https://deno.land/std@0.200.0/version.ts",
  },
]
`;

snapshot[`collect - multiple_imports.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 52,
          line: 3,
        },
        start: {
          character: 30,
          line: 3,
        },
      },
      specifier: "jsr:@luca/flag@1.0.0",
    },
    from: {
      name: "@luca/flag",
      path: "",
      protocol: "jsr:",
      version: "1.0.0",
    },
    to: {
      name: "@luca/flag",
      path: "",
      protocol: "jsr:",
      version: "123.456.789",
    },
  },
  {
    code: {
      span: {
        end: {
          character: 71,
          line: 0,
        },
        start: {
          character: 23,
          line: 0,
        },
      },
      specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
  {
    code: {
      span: {
        end: {
          character: 74,
          line: 1,
        },
        start: {
          character: 28,
          line: 1,
        },
      },
      specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
    },
    from: {
      name: "deno.land/x/deno_graph",
      path: "/mod.ts",
      protocol: "https:",
      version: "0.50.0",
    },
    to: {
      name: "deno.land/x/deno_graph",
      path: "/mod.ts",
      protocol: "https:",
      version: "123.456.789",
    },
  },
  {
    code: {
      span: {
        end: {
          character: 40,
          line: 2,
        },
        start: {
          character: 18,
          line: 2,
        },
      },
      specifier: "npm:node-emoji@2.0.0",
    },
    from: {
      name: "node-emoji",
      path: "",
      protocol: "npm:",
      version: "2.0.0",
    },
    to: {
      name: "node-emoji",
      path: "",
      protocol: "npm:",
      version: "123.456.789",
    },
  },
]
`;

snapshot[`collect - import_map_referred - import_map.json 1`] = `
[
  {
    code: {
      span: undefined,
      specifier: "https://deno.land/x/dax@0.17.0/mod.ts",
    },
    from: {
      name: "deno.land/x/dax",
      path: "/mod.ts",
      protocol: "https:",
      version: "0.17.0",
    },
    to: {
      name: "deno.land/x/dax",
      path: "/mod.ts",
      protocol: "https:",
      version: "123.456.789",
    },
  },
]
`;

snapshot[`collect - import_map_referred - mod.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 19,
          line: 0,
        },
        start: {
          character: 14,
          line: 0,
        },
      },
      specifier: "dax",
    },
    from: {
      name: "deno.land/x/dax",
      path: "/mod.ts",
      protocol: "https:",
      version: "0.17.0",
    },
    to: {
      name: "deno.land/x/dax",
      path: "/mod.ts",
      protocol: "https:",
      version: "123.456.789",
    },
  },
]
`;

snapshot[`collect - updated_import_and_outdated_export.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 84,
          line: 1,
        },
        start: {
          character: 29,
          line: 1,
        },
      },
      specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/assert/assert_equals.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/assert/assert_equals.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
]
`;

snapshot[`collect - import_map - deno.json 1`] = `
[
  {
    code: {
      span: undefined,
      specifier: "jsr:@luca/flag@1.0.0",
    },
    from: {
      name: "@luca/flag",
      path: "",
      protocol: "jsr:",
      version: "1.0.0",
    },
    to: {
      name: "@luca/flag",
      path: "",
      protocol: "jsr:",
      version: "123.456.789",
    },
  },
  {
    code: {
      span: undefined,
      specifier: "https://deno.land/std@0.200.0/",
    },
    from: {
      name: "deno.land/std",
      path: "/",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/",
      protocol: "https:",
      version: "0.218.0",
    },
  },
  {
    code: {
      span: undefined,
      specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
    },
    from: {
      name: "deno.land/x/deno_graph",
      path: "/mod.ts",
      protocol: "https:",
      version: "0.50.0",
    },
    to: {
      name: "deno.land/x/deno_graph",
      path: "/mod.ts",
      protocol: "https:",
      version: "123.456.789",
    },
  },
  {
    code: {
      span: undefined,
      specifier: "npm:node-emoji@2.0.0",
    },
    from: {
      name: "node-emoji",
      path: "",
      protocol: "npm:",
      version: "2.0.0",
    },
    to: {
      name: "node-emoji",
      path: "",
      protocol: "npm:",
      version: "123.456.789",
    },
  },
]
`;

snapshot[`collect - import_map - mod.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 36,
          line: 3,
        },
        start: {
          character: 30,
          line: 3,
        },
      },
      specifier: "flag",
    },
    from: {
      name: "@luca/flag",
      path: "",
      protocol: "jsr:",
      version: "1.0.0",
    },
    to: {
      name: "@luca/flag",
      path: "",
      protocol: "jsr:",
      version: "123.456.789",
    },
  },
  {
    code: {
      span: {
        end: {
          character: 38,
          line: 0,
        },
        start: {
          character: 23,
          line: 0,
        },
      },
      specifier: "std/assert.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/",
      protocol: "https:",
      version: "0.218.0",
    },
  },
  {
    code: {
      span: {
        end: {
          character: 40,
          line: 1,
        },
        start: {
          character: 28,
          line: 1,
        },
      },
      specifier: "deno_graph",
    },
    from: {
      name: "deno.land/x/deno_graph",
      path: "/mod.ts",
      protocol: "https:",
      version: "0.50.0",
    },
    to: {
      name: "deno.land/x/deno_graph",
      path: "/mod.ts",
      protocol: "https:",
      version: "123.456.789",
    },
  },
  {
    code: {
      span: {
        end: {
          character: 36,
          line: 2,
        },
        start: {
          character: 24,
          line: 2,
        },
      },
      specifier: "node-emoji",
    },
    from: {
      name: "node-emoji",
      path: "",
      protocol: "npm:",
      version: "2.0.0",
    },
    to: {
      name: "node-emoji",
      path: "",
      protocol: "npm:",
      version: "123.456.789",
    },
  },
]
`;

snapshot[`collect - npm.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 40,
          line: 0,
        },
        start: {
          character: 18,
          line: 0,
        },
      },
      specifier: "npm:node-emoji@2.0.0",
    },
    from: {
      name: "node-emoji",
      path: "",
      protocol: "npm:",
      version: "2.0.0",
    },
    to: {
      name: "node-emoji",
      path: "",
      protocol: "npm:",
      version: "123.456.789",
    },
  },
]
`;

snapshot[`collect - import_and_export.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 71,
          line: 0,
        },
        start: {
          character: 23,
          line: 0,
        },
      },
      specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
  {
    code: {
      span: {
        end: {
          character: 74,
          line: 1,
        },
        start: {
          character: 28,
          line: 1,
        },
      },
      specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
    },
    from: {
      name: "deno.land/x/deno_graph",
      path: "/mod.ts",
      protocol: "https:",
      version: "0.50.0",
    },
    to: {
      name: "deno.land/x/deno_graph",
      path: "/mod.ts",
      protocol: "https:",
      version: "123.456.789",
    },
  },
]
`;

snapshot[`collect - import_map_no_resolve - deno.json 1`] = `[]`;

snapshot[`collect - import_map_no_resolve - mod.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 71,
          line: 0,
        },
        start: {
          character: 23,
          line: 0,
        },
      },
      specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
]
`;

snapshot[`collect - relative_import - mod.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 71,
          line: 0,
        },
        start: {
          character: 23,
          line: 0,
        },
      },
      specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
]
`;

snapshot[`collect - lockfile - deno.json 1`] = `
[
  {
    code: {
      span: undefined,
      specifier: "jsr:@core/match@0.1.x",
    },
    from: {
      name: "@core/match",
      path: "",
      protocol: "jsr:",
      version: "0.1.0",
    },
    to: {
      name: "@core/match",
      path: "",
      protocol: "jsr:",
      version: "0.1.9",
    },
  },
  {
    code: {
      span: undefined,
      specifier: "https://deno.land/std@0.200.0/bytes/copy.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/bytes/copy.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/bytes/copy.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
  {
    code: {
      span: undefined,
      specifier: "https://deno.land/std@0.200.0/bytes/copy.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/bytes/copy.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/bytes/copy.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
  {
    code: {
      span: undefined,
      specifier: "npm:hono@^3",
    },
    from: {
      name: "hono",
      path: "",
      protocol: "npm:",
      version: "3.0.0",
    },
    to: {
      name: "hono",
      path: "",
      protocol: "npm:",
      version: "3.12.12",
    },
  },
]
`;

snapshot[`collect - lockfile - deno.json 2`] = `
[
  {
    data: {
      remote: {
        "https://deno.land/std@0.200.0/bytes/copy.ts": "939d89e302a9761dcf1d9c937c7711174ed74c59eef40a1e4569a05c9de88219",
      },
      version: "3",
    },
    specifier: "https://deno.land/std@0.200.0/bytes/copy.ts",
  },
  {
    data: {
      packages: {
        npm: {
          "hono@3.0.0": {
            dependencies: {},
            integrity: "sha512-OBWEvcRydCOLdOiazqOmKy8PXciR8uIyUM9HpmXot7UmwNBGOdEJvTrVRIgjV603w+go6cTXBOvFiQClSABT6Q==",
          },
        },
        specifiers: {
          "npm:hono@3.0.0": "npm:hono@3.0.0",
        },
      },
      remote: {},
      version: "3",
    },
    specifier: "npm:hono@^3",
  },
  {
    data: {
      packages: {
        jsr: {
          "@core/match@0.1.0": {
            dependencies: [
              "npm:ts-toolbelt@9.6.0",
            ],
            integrity: "6f1edfca5215735a12aa2dbd920ead331a501eb5e3ad70cba3b9787610c7bfaf",
          },
        },
        npm: {
          "ts-toolbelt@9.6.0": {
            dependencies: {},
            integrity: "sha512-nsZd8ZeNUzukXPlJmTBwUAuABDe/9qtVDelJeT/qW0ow3ZS3BsQJtNkan1802aM9Uf68/Y8ljw86Hu0h5IUW3w==",
          },
        },
        specifiers: {
          "jsr:@core/match@0.1.0": "jsr:@core/match@0.1.0",
          "npm:ts-toolbelt@9.6.0": "npm:ts-toolbelt@9.6.0",
        },
      },
      remote: {},
      version: "3",
    },
    specifier: "jsr:@core/match@0.1.x",
  },
]
`;

snapshot[`collect - lockfile - mod.ts 1`] = `
[
  {
    code: {
      span: undefined,
      specifier: "jsr:@core/match@0.1.x",
    },
    from: {
      name: "@core/match",
      path: "",
      protocol: "jsr:",
      version: "0.1.0",
    },
    to: {
      name: "@core/match",
      path: "",
      protocol: "jsr:",
      version: "0.1.9",
    },
  },
  {
    code: {
      span: {
        end: {
          character: 32,
          line: 0,
        },
        start: {
          character: 21,
          line: 0,
        },
      },
      specifier: "std/bytes",
    },
    from: {
      name: "deno.land/std",
      path: "/bytes/copy.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/bytes/copy.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
  {
    code: {
      span: undefined,
      specifier: "https://deno.land/std@0.200.0/bytes/copy.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/bytes/copy.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/bytes/copy.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
  {
    code: {
      span: undefined,
      specifier: "npm:hono@^3",
    },
    from: {
      name: "hono",
      path: "",
      protocol: "npm:",
      version: "3.0.0",
    },
    to: {
      name: "hono",
      path: "",
      protocol: "npm:",
      version: "3.12.12",
    },
  },
]
`;

snapshot[`collect - lockfile - mod.ts 2`] = `
[
  {
    data: {
      remote: {
        "https://deno.land/std@0.200.0/bytes/copy.ts": "939d89e302a9761dcf1d9c937c7711174ed74c59eef40a1e4569a05c9de88219",
      },
      version: "3",
    },
    specifier: "https://deno.land/std@0.200.0/bytes/copy.ts",
  },
  {
    data: {
      packages: {
        npm: {
          "hono@3.0.0": {
            dependencies: {},
            integrity: "sha512-OBWEvcRydCOLdOiazqOmKy8PXciR8uIyUM9HpmXot7UmwNBGOdEJvTrVRIgjV603w+go6cTXBOvFiQClSABT6Q==",
          },
        },
        specifiers: {
          "npm:hono@3.0.0": "npm:hono@3.0.0",
        },
      },
      remote: {},
      version: "3",
    },
    specifier: "npm:hono@^3",
  },
  {
    data: {
      packages: {
        jsr: {
          "@core/match@0.1.0": {
            dependencies: [
              "npm:ts-toolbelt@9.6.0",
            ],
            integrity: "6f1edfca5215735a12aa2dbd920ead331a501eb5e3ad70cba3b9787610c7bfaf",
          },
        },
        npm: {
          "ts-toolbelt@9.6.0": {
            dependencies: {},
            integrity: "sha512-nsZd8ZeNUzukXPlJmTBwUAuABDe/9qtVDelJeT/qW0ow3ZS3BsQJtNkan1802aM9Uf68/Y8ljw86Hu0h5IUW3w==",
          },
        },
        specifiers: {
          "jsr:@core/match@0.1.0": "jsr:@core/match@0.1.0",
          "npm:ts-toolbelt@9.6.0": "npm:ts-toolbelt@9.6.0",
        },
      },
      remote: {},
      version: "3",
    },
    specifier: "jsr:@core/match@0.1.x",
  },
]
`;

snapshot[`collect - jsonc - deno.jsonc 1`] = `
[
  {
    code: {
      span: undefined,
      specifier: "jsr:@luca/flag@1.0.0",
    },
    from: {
      name: "@luca/flag",
      path: "",
      protocol: "jsr:",
      version: "1.0.0",
    },
    to: {
      name: "@luca/flag",
      path: "",
      protocol: "jsr:",
      version: "123.456.789",
    },
  },
  {
    code: {
      span: undefined,
      specifier: "https://deno.land/std@0.200.0/",
    },
    from: {
      name: "deno.land/std",
      path: "/",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/",
      protocol: "https:",
      version: "0.218.0",
    },
  },
  {
    code: {
      span: undefined,
      specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
    },
    from: {
      name: "deno.land/x/deno_graph",
      path: "/mod.ts",
      protocol: "https:",
      version: "0.50.0",
    },
    to: {
      name: "deno.land/x/deno_graph",
      path: "/mod.ts",
      protocol: "https:",
      version: "123.456.789",
    },
  },
  {
    code: {
      span: undefined,
      specifier: "npm:node-emoji@2.0.0",
    },
    from: {
      name: "node-emoji",
      path: "",
      protocol: "npm:",
      version: "2.0.0",
    },
    to: {
      name: "node-emoji",
      path: "",
      protocol: "npm:",
      version: "123.456.789",
    },
  },
]
`;

snapshot[`collect - updated_and_outdated.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 84,
          line: 1,
        },
        start: {
          character: 29,
          line: 1,
        },
      },
      specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/assert/assert_equals.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/assert/assert_equals.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
]
`;

snapshot[`collect - multiple_modules - mod.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 84,
          line: 0,
        },
        start: {
          character: 29,
          line: 0,
        },
      },
      specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/assert/assert_equals.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/assert/assert_equals.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
  {
    code: {
      span: {
        end: {
          character: 71,
          line: 0,
        },
        start: {
          character: 23,
          line: 0,
        },
      },
      specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
  {
    code: {
      span: {
        end: {
          character: 74,
          line: 1,
        },
        start: {
          character: 28,
          line: 1,
        },
      },
      specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
    },
    from: {
      name: "deno.land/x/deno_graph",
      path: "/mod.ts",
      protocol: "https:",
      version: "0.50.0",
    },
    to: {
      name: "deno.land/x/deno_graph",
      path: "/mod.ts",
      protocol: "https:",
      version: "123.456.789",
    },
  },
  {
    code: {
      span: {
        end: {
          character: 40,
          line: 2,
        },
        start: {
          character: 18,
          line: 2,
        },
      },
      specifier: "npm:node-emoji@2.0.0",
    },
    from: {
      name: "node-emoji",
      path: "",
      protocol: "npm:",
      version: "2.0.0",
    },
    to: {
      name: "node-emoji",
      path: "",
      protocol: "npm:",
      version: "123.456.789",
    },
  },
]
`;

snapshot[`collect - import.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 71,
          line: 0,
        },
        start: {
          character: 23,
          line: 0,
        },
      },
      specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.200.0",
    },
    to: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
]
`;

snapshot[`collect - unversioned.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 63,
          line: 0,
        },
        start: {
          character: 23,
          line: 0,
        },
      },
      specifier: "https://deno.land/std/assert/assert.ts",
    },
    from: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: undefined,
    },
    to: {
      name: "deno.land/std",
      path: "/assert/assert.ts",
      protocol: "https:",
      version: "0.218.0",
    },
  },
]
`;

snapshot[`collect - jsr.ts 1`] = `
[
  {
    code: {
      span: {
        end: {
          character: 48,
          line: 0,
        },
        start: {
          character: 23,
          line: 0,
        },
      },
      specifier: "jsr:@std/assert@0.210.0",
    },
    from: {
      name: "@std/assert",
      path: "",
      protocol: "jsr:",
      version: "0.210.0",
    },
    to: {
      name: "@std/assert",
      path: "",
      protocol: "jsr:",
      version: "123.456.789",
    },
  },
]
`;
